--- a/src/scss/grid-layout.scss
+++ b/src/scss/grid-layout.scss
@@ -23,7 +23,7 @@
     font-family: 'Oswald', sans-serif;
     font-weight: 400;
     font-size: 2.2em;
-    color: $ubatuba;
+    color: $gray-40;
     text-indent: 0;
     margin: 0.5em 0 0.5em 0;
     background: transparent;
@@ -162,8 +162,8 @@
       .research-logo-frame{
         // position: relative;
         // flex: 0 0 auto;
-        width: 9rem;
-        height: 9rem;
+        // width: 9rem;
+        // height: 9rem;
         font-family: 'Oswald', sans-serif;
         font-weight: 200;
         font-size: 0.6em;
