--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -9,6 +9,35 @@
   display: flex;
 }
 
+
+.transitionDiv {
+  background: red;
+  height: 100px;
+  width: 200px;
+  margin: 0 auto;
+}
+
+@keyframes inAnimation {
+  0% {
+    opacity: 0;
+    visibility: hidden;
+  }
+  100% {
+    opacity: 1;
+    visibility: visible;
+  }
+}
+
+@keyframes outAnimation {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
 //not used???
 // @mixin flex($values) {
 //   -webkit-box-flex: $values;
