--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -4,7 +4,6 @@
 .site-footer{
   display: flex;
   background-color: $background--80;
-  opacity: 0.8;
   height: 45px;
   width: 100%;
   bottom: 0;
@@ -12,18 +11,16 @@
   justify-content: space-between;
   align-items: center;
   flex: 0 1 100%;
-  z-index: 20;
-
-  .footer-logo{
-    display: flex;
-    align-self: center;
-    padding-top: 0.1em;
-    padding-bottom: 0.3em;
-    padding-left: 3em;
-    img {
-      max-width: 170px;
-      height:auto;
+  z-index: 25;
+  a{
+    max-height: 45px;
+    .footer-logo{
+      padding-top: 0.1em;
+      padding-bottom: 0.2em;
+      padding-left: 3em;
+      width: 210px;
       object-fit:cover;
+      height: 45px;
     }
   }
 
@@ -32,6 +29,6 @@
     padding-left: 2em;
     font-size: .9rem;
     line-height: 1.2rem;
-    color: $gray-40;
+    color: $gray-50;
   }
 }
