--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -4,6 +4,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Anton&family=Bree+Serif&family=Libre+Caslon+Text:ital,wght@0,400;0,700;1,400&family=Nova+Square&family=Oswald:wght@200;400;700&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200');
+
 //use this to place font family in scss:
 // font-family: 'Alfa Slab One', cursive;
 // font-family: 'Anton', sans-serif;
