--- a/src/scss/article.scss
+++ b/src/scss/article.scss
@@ -201,8 +201,8 @@
   .caption{
     font-family: 'Oswald', sans-serif;
     font-weight: 400;
-    font-size: 1em;
-    padding: 1em 0 0 0 ;
+    // font-size: 1em;
+    padding: 0.5em 0 1.5em 0 ;
   }
   .caption-none{
     padding: 0em ;
