--- a/src/scss/article.scss
+++ b/src/scss/article.scss
@@ -27,9 +27,18 @@
         top: 0;
         height: 100px;
         width: 100%;
-        object-position: 50% 50%;
         object-fit: cover;
+        object-position: 50% 40%;
         overflow: hidden;
+      }
+      img.article-main-photo.ces{
+        object-position: 50% 45%;
+      }
+      img.article-main-photo.pwe{
+        object-position: 50% 55%;
+      }
+      img.article-main-photo.ss{
+        object-position: 50% 65%;
       }
       /* The overlay effect - lays on top of the container and over the image */
       .overlay {
@@ -37,12 +46,12 @@
         top: 0;
         height: 100px;
         width: 100%;
-        background: linear-gradient(rgba(58, 76, 105, 0.7), rgba(52, 65, 105, 0.7));
+        background: linear-gradient(rgba(58, 76, 105, 0.3), rgba(52, 65, 105, 0.3));
         transition: all .3s ease-in-out;
         opacity:0.5;
 
         &:hover {
-          background: linear-gradient(rgba(58, 76, 105, 0.5), rgba(52, 65, 105, 0.5));
+          background: linear-gradient(rgba(58, 76, 105, 0.7), rgba(52, 65, 105, 0.7));
         }
       }
     }  //end container
@@ -275,6 +284,8 @@
   margin: 1em 0;
   font-size: 1em;
 }
+
+
 
 /* Large screens */
 @media only screen and (max-width: 1200px) {
