--- a/src/scss/grid-layout.scss
+++ b/src/scss/grid-layout.scss
@@ -172,8 +172,8 @@
         transition: all 0.3s ease-in-out;
         width: 250px;
         height: 250px;
-        background-color: $gray-10;
-        border-radius: $border-radius-half;
+        background-color: white;
+        border-radius: $border-radius;
         margin: 0 3em 1em 0;
 
         img.research-logo{
@@ -182,6 +182,16 @@
           max-width: 250px;
           max-height: 250px;
         }
+        img.research-logo.cnsi{
+          width: 250px;
+          height: 250px;
+        }
+        img.research-logo.tanms{
+          object-fit: contain;
+          width: 250px;
+          height: 250px;
+        }
+
         &:hover{
             box-shadow: $box-shadow-a3;
         }
@@ -191,15 +201,15 @@
         font-family: 'Oswald', sans-serif;
         font-weight: 400;
         font-size: 0.9em;
-        margin-bottom: 0.5em;
+        margin-bottom: 0.3em;
         text-indent: 0;
         text-align: left;
       }
       .research-prof{
         font-family: 'Oswald', sans-serif;
         font-weight: 200;
-        font-size: 1em;
-        margin-bottom: 0.5em;
+        font-size: 0.9em;
+        // margin-bottom: 0.1em;
         text-indent: 0;
         text-align: left;
       }
