--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -159,7 +159,7 @@
   background-size: cover;
   background-position: center center;
   overflow: hidden;
-  background-image: url("https://source.unsplash.com/Rh0OHLl_I5k/1500x1500");
+  background-image: url("../assets/images/madni_PrincePhilipHouse.jpg");
   // background-image: url("https://source.unsplash.com/CUY_YHhCFl4/1500x1500");
 }
 
